src/App.scss
@import './Variables';

.wrapper {
  text-align: center;
  width: 100vw;
  min-height: 100vh;
  position: relative;
  transition: all .5s;
}

#light {
  background-color: $bg-light-main;
}

#dark {
  background-color: $bg-dark-main;
}

.content-container {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-bottom: 2rem;
  position: relative;
  min-height: 50vh;
}

.heartIcon {
  position: absolute;
  top: 0;
  right: 3%;
  color: rgb(248, 1, 1);
  font-size: 2.5rem;
  margin: 1rem;
  cursor: pointer;
  transition: all .2s;

  &:hover {
    font-size: 3rem;
    transform: translate(3px, -3px);
  }

  &:active {
    color: darken(rgb(248, 1, 1), 15);
    transform: translate(3px, -3px) scale(.8);
  }
}
.xIcon {
  color: rgba(255, 255, 255, .9);

  &:active {
    color: rgba(255, 255, 255, .3);
    // transform: translate(3px, -3px) scale(.8);
  }
}

.heartGrey {
  color: rgba(79, 79, 79, 0.8);
}

.heartIconAnimation {
  animation: fadeIn .5s;

  @keyframes fadeIn {
    0% {
      opacity: 0;
      font-size: 0;
    }
    50% {
      font-size: 3.5rem;
    }
    100% {
      opacity: 1;
      font-size: 2.5rem;
    }
  }
}

.grid-container {
  min-height: 60vh;
  line-height: 0;
  -webkit-column-count: 1;
  -webkit-column-gap: 1rem;
  -moz-column-count: 1;
  -moz-column-gap: 1rem;
  column-count: 1;
  column-gap: 1rem;
  padding: 3.5rem;
  border-radius: 15px;
  width: 90%;
  max-width: 150rem;
  background-color: $bg-dark-container;
  box-shadow: $box-shadow-darker-lg;

  h1 {
    line-height: 1.5;
    width: 50%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: .5;
  }
}

.grid-container-light {
  background-color: $bg-lighter-container;
  box-shadow: $box-shadow-light-b-10;
}

.loadingWrapper {
    position: absolute;
    top: 45%;
    left: 50%;
    transform: translate(-50%, -50%) scale(1.8);
  }

.grid-item {
  margin: 0 0 1rem 0;
  position: relative;
  cursor: pointer;

  .grid-item-container {
    img {
      width: 100%;
      opacity: .7;
      transition: all .2s;

      &:hover {
        opacity: 1;
      }
    }
  }

  &::before {
    content: '';
    width: 100%;
    height: 100%;
    position: absolute;
    background: rgba(17, 17, 17, 0.6);
    transition: all .2s;
    z-index: -1;
  }
}

.grid-item-random {
  margin: 10px 0;
  position: relative;
  filter: drop-shadow($box-shadow-dark-lg);

  a {
    img {
      border-radius: 15px;
      width: 100%;
      height: 100%;
    }
  }
}

.notification {
  box-shadow: none;
  border-radius: 25px;
  font-size: 1.1rem;
}

// Responsive Design PHONES
@media only screen and (max-width: 300px) {
  .grid-item {
    a {
      img {
        width: 100%;
      }
    }
  }

}

@media only screen and (min-width: 400px) {
  .grid-container {
    -webkit-column-count: 1;
    -moz-column-count: 1;
    column-count: 1;
  }
}

// Responsive Design BIG PHONES and SMALL TABLETS
@media only screen and (min-width: 600px) {
  .grid-container {
    -webkit-column-count: 2;
    -webkit-column-gap: 1rem;
    -moz-column-count: 2;
    -moz-column-gap: 1rem;
    column-count: 2;
    column-gap: 1rem;
  }

  .grid-item {
    a {
      img {
        width: 100%;
      }
    }
  }
}

// Responsive Design AVERAGE TABLETS
@media only screen and (min-width: 852px) {
  .grid-container {
    -webkit-column-count: 3;
    -moz-column-count: 3;
    column-count: 3;
  }
}

// Responsive Design DESKTOP
@media only screen and (min-width: 1200px) {
  .grid-container {
    -webkit-column-count: 4;
    -moz-column-count: 4;
    column-count: 4;
  }
}

